新增「新增商品」和「商品圖庫」

--- a/iiot/app_web/admin - 191002/product.html
+++ b/iiot/app_web/admin - 191002/product.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>商品管理</title>
 	<meta name='description' content=""/>
 	<meta name='keywords' content=""/>
 	<meta name="MobileOptimized" content="width">
@@ -123,6 +123,7 @@
 				<div class="right_info">
 					<div class="top_title_box">
 						<h2>Category2</h2>
+						<a class="add_new_product" href="create_product.html"><i class="fas fa-plus"></i></a>
 						<a class="more_function"><i class="fas fa-ellipsis-v"></i></a>
 						<ul class="products_tools">
 	                        <li><p><a href="#change_product_info" rel="modal:open">編輯商品</a></p></li><!-- 選一個才會出現 或是 出現多個商品 一起修改?? -->
