新增按鈕，調整css

--- a/iiot/app_web/admin - 191002/order_management_01.html
+++ b/iiot/app_web/admin - 191002/order_management_01.html
@@ -90,8 +90,9 @@
 		    </ul>
 		    <div class="bottom_btn clearfix">
 				<p class="btn clearfix">
-					<a class="c_red" href="#">取消訂單</a>
-					<a href="#">列印</a>
+					<a class="c_yellow" href="#">列印</a>
+					<a class="c_gray" href="#">取消訂單</a>
+					<a class="c_gray" href="#">取消物流</a>
 				</p>
 			</div>
 		</section>
