--- a/iiot/app_web/admin - 191002/upload_photo.html
+++ b/iiot/app_web/admin - 191002/upload_photo.html
@@ -22,7 +22,7 @@
 			</div>
 			<ul class="gallery_list clearfix">
 				<li class="img_url btn_in" style="background-image:url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);"></li>
-                <li class="img_url" style="background-image:url(http://likea.ezvivi.com/manage/0/product/199868/F_m.jpg);"></li>
+                <li class="img_url btn_in" style="background-image:url(http://likea.ezvivi.com/manage/0/product/199868/F_m.jpg);"></li>
                 <li class="img_url" style="background-image:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3SjvW7r0c5jlj4qMwCIc7pe7FtzuaC_lDJ7jD23nEgS2k2IkH);"></li>
                 <li class="img_url" style="background-image:url(https://pic.pimg.tw/drm88/1530518551-1398702721_l.jpg);"></li>
                 <li class="img_url" style="background-image:url(https://cp.cw1.tw/files/md5/6b/75/6b75c457d3b1df8e43c3922f69a1f4f4-82500.jpg);"></li>
