lightbox 新增商品畫面 - 新增"已選擇圖片/重新上傳圖片"狀態

--- a/iiot/app_web/admin - 191002/product.html
+++ b/iiot/app_web/admin - 191002/product.html
@@ -533,12 +533,17 @@
 	    	<div class="the_product_info create_product">
 	    		<ul class="new_product">
 					<li class="top_content clearfix">
-						<div class="upload_photo">
+						<!-- <div class="upload_photo">
 							<a href="#upload_photo" rel="modal:open">
 								<i class="fas fa-image"></i>
 								<p>選擇圖片</p>
 							</a>
-						</div> 
+						</div> -->
+						<div class="upload_photo">
+							<a class="photo_choosed" href="#upload_photo" rel="modal:open" style="background-image:url(https://www.sushiexpress.com.tw/images/Product/4_s.png);">
+								<p>重新選擇<br>圖片</p>
+							</a>
+						</div>
 						<div class="right_product_set">
 		               		<div class="product_status clearfix">
 		               			<p class="l_title">上架狀態</p>
