新增介紹與方案

--- a/jetfi_wifi/country_list.html
+++ b/jetfi_wifi/country_list.html
@@ -9,12 +9,47 @@
 		<meta name="HandheldFriendly" content="true">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/style.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+		<script type="text/javascript">
+		    $(function(){
+			    $(".header_nav ul li").click(function(){
+			    	$(this).parent().find("li .sub_item").hide();
+			    	$(this).find(".sub_item").show();
+			    	return false;
+			    });
+			});
+		</script>
 	</head>
 	<body>
 		<header class="header_container">
 			<section class="header_content clearfix">
 				<a class="header_jetfi_logo" href="index.html">jetfi 桔豐科技</a>
+				<nav class="header_nav">
+					<ul>
+						<li class="languages">
+							<a>
+								<p class="choose">繁體中文</p>
+								<div class="sub_item">
+									<div class="sub_list">
+										<p>繁體中文</p>
+										<p>English</p>
+									</div>
+								</div>
+							</a>
+						</li>
+						<li class="currency">
+							<a>
+								<p class="choose">TWD</p>
+								<div class="sub_item">
+									<div class="sub_list">
+										<p>TWD 新台幣</p>
+										<p>USD 美金</p>
+									</div>
+								</div>
+							</a>
+						</li>
+					</ul>
+				</nav>
 			</section>
 		</header>
 		<main class="main_container">
