調整金額最小寬度

--- a/jetfi_wifi/plan_list_row.html
+++ b/jetfi_wifi/plan_list_row.html
@@ -135,7 +135,7 @@
 			   			<div class="plan_info clearfix">
 				   			<div class="left_content clearfix">
 				   				<h4 class="plan_title">中國漫遊+亞洲多國含港澳500MB</h4>
-					   			<p class="plan_price"><span><span class="p_s">$</span>99</span>/日</p>
+					   			<p class="plan_price"><span><span class="p_s">NTD</span>11,199</span>/日</p>
 					   		</div>
 				   			<p class="plan_order">
 				   				<a href="#">立即預訂</a>
@@ -146,7 +146,7 @@
 			   			<div class="plan_info clearfix">
 				   			<div class="left_content clearfix">
 				   				<h4 class="plan_title">日本吃到飽</h4>
-					   			<p class="plan_price"><span><span class="p_s">$</span>299</span>/日</p>
+					   			<p class="plan_price"><span><span class="p_s">JPY</span>1000</span>/日</p>
 					   		</div>
 				   			<p class="plan_order">
 				   				<a href="#">予約します</a>
