--- a/iiot/app_web/admin - 191002/product_plus_gifts.html
+++ b/iiot/app_web/admin - 191002/product_plus_gifts.html
@@ -45,7 +45,9 @@
 			<table class="list" cellpadding="0" cellspacing="0" border="0">
 				<thead>
 					<tr class="top_title">
-						<th>品名</th>
+						<th>顯示名稱</th>
+						<th>標註名稱</th>
+						<th width="45">價格</th>
 						<th width="90">狀態</th>
 						<th width="90">功能</th>
 					</tr>
@@ -53,6 +55,8 @@
 				<tbody>
 					<tr>
 						<td>紅茶</td>
+						<td>紅茶</td>
+						<td>-5</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
@@ -64,6 +68,8 @@
 					</tr>
 					<tr>
 						<td>紅茶</td>
+						<td>紅茶</td>
+						<td>5</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
@@ -75,6 +81,8 @@
 					</tr>
 					<tr>
 						<td>紅茶</td>
+						<td>紅茶</td>
+						<td>-5</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
@@ -86,6 +94,8 @@
 					</tr>
 					<tr>
 						<td>紅茶</td>
+						<td>紅茶</td>
+						<td>-5</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
@@ -97,6 +107,8 @@
 					</tr>
 					<tr>
 						<td>紅茶</td>
+						<td>紅茶</td>
+						<td>15</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
@@ -108,6 +120,8 @@
 					</tr>
 					<tr>
 						<td>牛肉漢堡食譜</td>
+						<td>牛肉漢堡食譜</td>
+						<td>95</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
@@ -119,6 +133,8 @@
 					</tr>
 					<tr>
 						<td>泰式涼拌海鮮沙拉</td>
+						<td>泰式涼拌海鮮沙拉</td>
+						<td>15</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
@@ -130,6 +146,8 @@
 					</tr>
 					<tr>
 						<td>南法風健康海鮮沙拉蜂蜜優格醬</td>
+						<td>南法風健康海鮮沙拉蜂蜜優格醬</td>
+						<td>10</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
@@ -141,6 +159,8 @@
 					</tr>
 					<tr>
 						<td>紅茶</td>
+						<td>紅茶</td>
+						<td>15</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
@@ -152,6 +172,8 @@
 					</tr>
 					<tr>
 						<td>紅茶</td>
+						<td>紅茶</td>
+						<td>35</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
@@ -163,6 +185,8 @@
 					</tr>
 					<tr>
 						<td>紅茶</td>
+						<td>紅茶</td>
+						<td>10</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
@@ -174,6 +198,8 @@
 					</tr>
 					<tr>
 						<td>紅茶</td>
+						<td>紅茶</td>
+						<td>16</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
@@ -185,6 +211,8 @@
 					</tr>
 					<tr>
 						<td>紅茶</td>
+						<td>紅茶</td>
+						<td>50</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
@@ -196,6 +224,8 @@
 					</tr>
 					<tr>
 						<td>加購飲料紅茶/奶茶/咖啡500cc</td>
+						<td>紅茶</td>
+						<td>35</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
@@ -208,6 +238,8 @@
 					<tr>
 						<td>Kitty毛絨杯套及Kitty飲料提袋</td>
 						<td>上架</td>
+						<td>紅茶</td>
+						<td>5</td>
 						<td>
 							<div class="btn_swtich clearfix">
 			                    <div class="swtich_type">
@@ -218,6 +250,8 @@
 					</tr>
 					<tr>
 						<td>紅茶</td>
+						<td>紅茶</td>
+						<td>-10</td>
 						<td>上架</td>
 						<td>
 							<div class="btn_swtich clearfix">
