--- a/iiot/app_web/admin - 191002/index.html
+++ b/iiot/app_web/admin - 191002/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
+<html>
 <head>
 	<meta charset="UTF-8">
 	<title>首頁入口</title>
@@ -7,7 +7,7 @@
 	<meta name='keywords' content=""/>
 	<meta name="MobileOptimized" content="width">
 	<meta name="HandheldFriendly" content="true">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
 	<link rel="stylesheet" href="css/manager-standard-style.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
