--- a/iiot/app_web/admin - 191002/order_management.html
+++ b/iiot/app_web/admin - 191002/order_management.html
@@ -7,7 +7,7 @@
 	<meta name='keywords' content=""/>
 	<meta name="MobileOptimized" content="width">
 	<meta name="HandheldFriendly" content="true">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
 	<link rel="stylesheet" href="css/manager-standard-style.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
