ul 新添樣式 "style_one"

--- a/iiot/app_web/shop- takeapart/index.html
+++ b/iiot/app_web/shop- takeapart/index.html
@@ -83,7 +83,8 @@
 					<div class="top_title_box clearfix">
 						<h2>Category2</h2>
 					</div>
-					<ul class="products_list clearfix">
+					<!-- 切換樣式，只要在 ul 這新添 style_one 就可以切換-->
+					<ul class="products_list style_one clearfix">
 						<li class="clearfix"> <!-- ※幫我寫按了+後會有the_selected (邊框顏色)也就是說 value 數字大於０會有後會有 the_selected -->
 							<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);">
 								<p class="sold"><span>售完</span></p>
