無效按鈕效果 invalid

--- a/iiot/app_web/admin - 191002/product.html
+++ b/iiot/app_web/admin - 191002/product.html
@@ -654,7 +654,7 @@
             </ul>
 	    	<div class="the_button">
 	    		<a class="btn" href="#" rel="modal:close">取消</a>
-	    		<a class="btn c_org done" href="#">選擇這張圖片</a>
+	    		<a class="btn c_org invalid" href="#">選擇這張圖片</a>
 	    		<a class="btn c_org delete" href="#"><i class="fas fa-trash-alt"></i></a>
 	  		</div>
 	    </div>
