--- a/iiot/app_web/admin - 191002/product.html
+++ b/iiot/app_web/admin - 191002/product.html
@@ -19,7 +19,7 @@
 
 	<!-- 強迫修改css -->
     <style type="text/css">
-    	.blocker{ background-color: rgba(0,0,0,0.5);}
+    	.blocker{ background-color: rgba(0,0,0,0.5); z-index: 2;}
     	.modal{box-shadow: 0 0 10px #0009;}
     </style>
 
@@ -324,10 +324,37 @@
 	    <div id="change_product_info" class="modal fade fadebox">
 	    	<div class="the_product_info">
 	    		<h3 class="top_title">編輯商品內容</h3>
-	    		<ul>
+	    		<ul class="new_product">
+	    			<li class="top_content clearfix">
+						<!-- <div class="upload_photo">
+							<a href="#upload_photo" rel="modal:open">
+								<i class="fas fa-image"></i>
+								<p>選擇圖片</p>
+							</a>
+						</div> -->
+						<div class="upload_photo">
+							<a class="photo_choosed" href="#upload_photo" rel="modal:open" style="background-image:url(https://www.sushiexpress.com.tw/images/Product/4_s.png);">
+								<p>重新選擇<br>圖片</p>
+							</a>
+						</div>
+						<div class="right_product_set">
+		               		<!-- <div class="product_status clearfix">
+		               			<p class="l_title">上架狀態</p>
+								<div class="btn_swtich clearfix">
+				                    <div class="swtich_type">
+				                    	<input type="checkbox" id="here" checked=""><label class="button" for="here"></label>
+				                    </div>
+				                </div>
+		               		</div> -->
+		               		<div>
+				                <p>商品名稱</p>
+				    			<input type="text" name="" placeholder="請輸入商品名稱" value="產品AAA">
+				    		</div>
+						</div> 
+					</li>
 	    			<li>
-	    				<p>商品名稱</p>
-	    				<input type="text" name="" placeholder="請輸入商品名稱" value="產品AAA">
+	    				<!-- <p>商品名稱</p>
+	    				<input type="text" name="" placeholder="請輸入商品名稱" value="產品AAA"> -->
 	    				<p>商品說明</p>
 	    				<textarea type="text" placeholder="請輸入商品說明" >產品AAA產品AAA產品AAA 針對商品描述的描述針對商品描述的描述...</textarea>
 	    				<p>商品金額</p>
