--- a/Richtek/food.html
+++ b/Richtek/food.html
@@ -36,8 +36,8 @@
 						</div>
 					</div>
 				</div>
-				<ul class="store_list">
-					<li>
+				<ul class="store_list clearfix">
+					<!-- <li>
 						<div class="store_content">
 							<a class="store_photo"></a>
 							<h3 class="store_name">千葉火鍋-新竹忠孝店</h3>
@@ -54,7 +54,209 @@
 								</p>
 							</div>
 						</div>
+					</li> -->
+					<li>
+						<div class="store_content">
+							<div class="store_photo">
+								<img src="images/store_img/food_01.jpg" alt="田川日本料理">
+							</div>
+							<h3 class="store_name">田川日本料理(新竹湳雅店)</h3>
+							<div class="store_info">
+								<p>
+									<span class="c_blue">優惠截止：</span><br>
+									2021/7/15<br>
+									<span class="c_blue">地址：</span><br>
+									新竹市湳雅街87號<br>
+									<span class="c_blue">電話：</span><br>
+									03-5422234<br>
+									<span class="c_blue">優惠內容：</span><br>
+									1. 凡內用單點消費於$1000以上享有9折優惠； $1000以內 9.5折優惠，外帶、合菜及酒水不適用(需於結帳前告知服務人員特約商並提供識別證)<br>
+									2. 特約只限新竹湳雅店適用
+								</p>
+							</div>
+						</div>
 					</li>
+					<li>
+						<div class="store_content">
+							<div class="store_photo">
+								<img src="images/store_img/food_02.jpg" alt="全家福客家餐館">
+							</div>
+							<h3 class="store_name">全家福客家餐館</h3>
+							<div class="store_info">
+								<p>
+									<span class="c_blue">優惠截止：</span><br>
+									2020/12/31<br>
+									<span class="c_blue">地址：</span><br>
+									竹北市光明六路118號<br>
+									<span class="c_blue">電話：</span><br>
+									03-6568619<br>
+									<span class="c_blue">優惠內容：</span><br>
+									1.凡來店消費點餐小吃消費或預約商業合菜消費，即享菜色9折優惠。<br>
+									2.本合約優惠，與其他優惠活動專案擇一使用。<br>
+									3.喜宴、外匯宇期他宴會依餐廳規定優惠辦法(來電洽詢)。<br>
+									4.餐廳於特殊節日期間與農曆春節期間不是用此優惠。
+								</p>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="store_content">
+							<div class="store_photo">
+								<img src="images/store_img/food_03.jpg" alt="POLO CAFÉ-竹北店/巨成店">
+							</div>
+							<h3 class="store_name">POLO CAFÉ-竹北店/巨成店</h3>
+							<div class="store_info">
+								<p>
+									<span class="c_blue">優惠截止：</span><br>
+									2020/12/31<br>
+									<span class="c_blue">地址：</span><br>
+									新竹縣竹北市環北路一段105號 <br>
+									<span class="c_blue">電話：</span><br>
+									03-5559999<br>
+									<span class="c_blue">優惠內容：</span><br>
+									出示識別來店消費即享有所有店內商品9折優惠
+								</p>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="store_content">
+							<div class="store_photo">
+								<img src="images/store_img/food_04.jpg" alt="千葉火鍋-新竹忠孝店">
+							</div>
+							<h3 class="store_name">千葉火鍋-新竹忠孝店</h3>
+							<div class="store_info">
+								<p>
+									<span class="c_blue">優惠截止：</span><br>
+									2020/12/31<br>
+									<span class="c_blue">地址：</span><br>
+									新竹市東區忠孝路281號 <br>
+									<span class="c_blue">電話：</span><br>
+									03 5723525 / 03-5723997<br>
+									<span class="c_blue">優惠內容：</span><br>
+									出示識別來店消費即享有所有店內商品9折優惠
+								</p>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="store_content">
+							<div class="store_photo">
+								<img src="images/store_img/food_05.jpg" alt="全家福客家餐館">
+							</div>
+							<h3 class="store_name">全家福客家餐館</h3>
+							<div class="store_info">
+								<p>
+									<span class="c_blue">優惠截止：</span><br>
+									2020/12/31<br>
+									<span class="c_blue">地址：</span><br>
+									竹北市光明六路118號 <br>
+									<span class="c_blue">電話：</span><br>
+									03-6568619<br>
+									<span class="c_blue">優惠內容：</span><br>
+									1.凡來店消費點餐小吃消費或預約商業合菜消費，即享菜色9折優惠。<br>
+									2.本合約優惠，與其他優惠活動專案擇一使用。<br>
+									3.喜宴、外匯宇期他宴會依餐廳規定優惠辦法(來電洽詢)。<br>
+									4.餐廳於特殊節日期間與農曆春節期間不是用此優惠。
+								</p>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="store_content">
+							<div class="store_photo">
+								<img src="images/store_img/food_06.jpg" alt="千葉火鍋-新竹忠孝店">
+							</div>
+							<h3 class="store_name">千葉火鍋-新竹忠孝店</h3>
+							<div class="store_info">
+								<p>
+									<span class="c_blue">優惠截止：</span><br>
+									2020/12/31<br>
+									<span class="c_blue">地址：</span><br>
+									新竹市東區忠孝路281號 <br>
+									<span class="c_blue">電話：</span><br>
+									03 5723525 / 03-5723997<br>
+									<span class="c_blue">優惠內容：</span><br>
+									出示識別來店消費即享有所有店內商品9折優惠
+								</p>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="store_content">
+							<div class="store_photo">
+								<img src="images/store_img/food_07.jpg" alt="全家福客家餐館">
+							</div>
+							<h3 class="store_name">全家福客家餐館</h3>
+							<div class="store_info">
+								<p>
+									<span class="c_blue">優惠截止：</span><br>
+									2020/12/31<br>
+									<span class="c_blue">地址：</span><br>
+									竹北市光明六路118號 <br>
+									<span class="c_blue">電話：</span><br>
+									03-6568619<br>
+									<span class="c_blue">優惠內容：</span><br>
+									1.凡來店消費點餐小吃消費或預約商業合菜消費，即享菜色9折優惠。<br>
+									2.本合約優惠，與其他優惠活動專案擇一使用。<br>
+									3.喜宴、外匯宇期他宴會依餐廳規定優惠辦法(來電洽詢)。<br>
+									4.餐廳於特殊節日期間與農曆春節期間不是用此優惠。<br>
+									5.凡來店消費點餐小吃消費或預約商業合菜消費，即享菜色9折優惠。<br>
+									6.本合約優惠，與其他優惠活動專案擇一使用。<br>
+									7.喜宴、外匯宇期他宴會依餐廳規定優惠辦法(來電洽詢)。<br>
+									8.餐廳於特殊節日期間與農曆春節期間不是用此優惠。
+								</p>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="store_content">
+							<div class="store_photo">
+								<img src="images/store_img/food_08.jpg" alt="千葉火鍋-新竹忠孝店">
+							</div>
+							<h3 class="store_name">千葉火鍋-新竹忠孝店</h3>
+							<div class="store_info">
+								<p>
+									<span class="c_blue">優惠截止：</span><br>
+									2020/12/31<br>
+									<span class="c_blue">地址：</span><br>
+									新竹市東區忠孝路281號 <br>
+									<span class="c_blue">電話：</span><br>
+									03 5723525 / 03-5723997<br>
+									<span class="c_blue">優惠內容：</span><br>
+									出示識別來店消費即享有所有店內商品9折優惠
+								</p>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="store_content">
+							<div class="store_photo">
+								<img src="images/store_img/food_09.jpg" alt="千葉火鍋-新竹忠孝店">
+							</div>
+							<h3 class="store_name">千葉火鍋-新竹忠孝店</h3>
+							<div class="store_info">
+								<p>
+									<span class="c_blue">優惠截止：</span><br>
+									2020/12/31<br>
+									<span class="c_blue">地址：</span><br>
+									新竹市東區忠孝路281號 <br>
+									<span class="c_blue">電話：</span><br>
+									03 5723525 / 03-5723997<br>
+									<span class="c_blue">優惠內容：</span><br>
+									出示識別來店消費即享有所有店內商品9折優惠
+								</p>
+							</div>
+						</div>
+					</li>
+				</ul>
+				<ul class="bottom_pages">
+					<li><p><a class="prev" href="#"><<</a></p></li>
+					<li><p class="btn_in"><a href="#">1</a></p></li>
+					<li><p><a href="#">2</a></p></li>
+					<li><p><a href="#">3</a></p></li>
+					<li><p><a href="#">4</a></p></li>
+					<li><p><a class="next" href="#">>></a></p></li>
 				</ul>
 				<ul class="other_link">
 					<li>
