--- a/Richtek/index.html
+++ b/Richtek/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
+<html lang="zh-tw">
 	<head>
 		<meta charset="UTF-8">
 		<title>特約商店享好康</title>
@@ -7,6 +7,7 @@
 		<meta name='keywords' content=""/>
 		<link rel="stylesheet" href="css/style.css">
 		<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+
 	</head>
 	<body>
 		<header class="headerBox">
