增加按鈕，調整細節

--- a/Richtek2/food.html
+++ b/Richtek2/food.html
@@ -39,53 +39,55 @@
 				<ul class="store_list clearfix">
 					<li>
 						<div class="store_content">
-							<div class="store_photo">
-								<img src="images/store_img/food_01.jpg" alt="田川日本料理">
-							</div>
+							<a class="store_photo" href="#">
+								<img src="images/store_img/brown-circle-and-chocolate-coffee.png" alt="">
+							</a>
 							<h3 class="store_name">田川日本料理(新竹湳雅店)</h3>
 							<div class="store_info">
 								<p>
-									<span class="c_blue">優惠截止：</span><br>
+									<span class="c_blue">優惠截止：</span>
 									2021/7/15<br>
-									<span class="c_blue">地址：</span><br>
+									<span class="c_blue">地　　址：</span>
 									新竹市湳雅街87號<br>
-									<span class="c_blue">電話：</span><br>
+									<span class="c_blue">電　　話：</span>
 									03-5422234<br>
-									<span class="c_blue">優惠內容：</span><br>
+									<span class="c_blue">優惠內容：</span>
 									1. 凡內用單點消費於$1000以上享有9折優惠； $1000以內 9.5折優惠，外帶、合菜及酒水不適用(需於結帳前告知服務人員特約商並提供識別證)<br>
 									2. 特約只限新竹湳雅店適用
 								</p>
+								<p class="btn"><a href="#">詳細資訊</a></p>
 							</div>
 						</div>
 					</li>
 					<li>
 						<div class="store_content">
-							<div class="store_photo">
-								<img src="images/store_img/food_02.jpg" alt="全家福客家餐館">
-							</div>
+							<a class="store_photo" href="#">
+								<img src="images/store_img/IKEA.png" alt="">
+							</a>
 							<h3 class="store_name">全家福客家餐館</h3>
 							<div class="store_info">
 								<p>
-									<span class="c_blue">優惠截止：</span><br>
+									<span class="c_blue">優惠截止：</span>
 									2020/12/31<br>
-									<span class="c_blue">地址：</span><br>
+									<span class="c_blue">地址：</span>
 									竹北市光明六路118號<br>
-									<span class="c_blue">電話：</span><br>
+									<span class="c_blue">電話：</span>
 									03-6568619<br>
-									<span class="c_blue">優惠內容：</span><br>
+									<span class="c_blue">優惠內容：</span>
 									1.凡來店消費點餐小吃消費或預約商業合菜消費，即享菜色9折優惠。<br>
 									2.本合約優惠，與其他優惠活動專案擇一使用。<br>
 									3.喜宴、外匯宇期他宴會依餐廳規定優惠辦法(來電洽詢)。<br>
 									4.餐廳於特殊節日期間與農曆春節期間不是用此優惠。
 								</p>
+								<p class="btn"><a href="#">詳細資訊</a></p>
 							</div>
 						</div>
 					</li>
 					<li>
 						<div class="store_content">
-							<div class="store_photo">
+							<a class="store_photo" href="#">
 								<img src="images/store_img/food_03.jpg" alt="POLO CAFÉ-竹北店/巨成店">
-							</div>
+							</a>
 							<h3 class="store_name">POLO CAFÉ-竹北店/巨成店</h3>
 							<div class="store_info">
 								<p>
@@ -98,14 +100,15 @@
 									<span class="c_blue">優惠內容：</span><br>
 									出示識別來店消費即享有所有店內商品9折優惠
 								</p>
+								<p class="btn"><a href="#">詳細資訊</a></p>
 							</div>
 						</div>
 					</li>
 					<li>
 						<div class="store_content">
-							<div class="store_photo">
+							<a class="store_photo" href="#">
 								<img src="images/store_img/food_04.jpg" alt="千葉火鍋-新竹忠孝店">
-							</div>
+							</a>
 							<h3 class="store_name">千葉火鍋-新竹忠孝店</h3>
 							<div class="store_info">
 								<p>
@@ -118,14 +121,15 @@
 									<span class="c_blue">優惠內容：</span><br>
 									出示識別來店消費即享有所有店內商品9折優惠
 								</p>
+								<p class="btn"><a href="#">詳細資訊</a></p>
 							</div>
 						</div>
 					</li>
 					<li>
 						<div class="store_content">
-							<div class="store_photo">
+							<a class="store_photo" href="#">
 								<img src="images/store_img/food_05.jpg" alt="全家福客家餐館">
-							</div>
+							</a>
 							<h3 class="store_name">全家福客家餐館</h3>
 							<div class="store_info">
 								<p>
@@ -141,14 +145,15 @@
 									3.喜宴、外匯宇期他宴會依餐廳規定優惠辦法(來電洽詢)。<br>
 									4.餐廳於特殊節日期間與農曆春節期間不是用此優惠。
 								</p>
+								<p class="btn"><a href="#">詳細資訊</a></p>
 							</div>
 						</div>
 					</li>
 					<li>
 						<div class="store_content">
-							<div class="store_photo">
+							<a href="#" class="store_photo">
 								<img src="images/store_img/food_06.jpg" alt="千葉火鍋-新竹忠孝店">
-							</div>
+							</a>
 							<h3 class="store_name">千葉火鍋-新竹忠孝店</h3>
 							<div class="store_info">
 								<p>
@@ -161,6 +166,7 @@
 									<span class="c_blue">優惠內容：</span><br>
 									出示識別來店消費即享有所有店內商品9折優惠
 								</p>
+								<p class="btn"><a href="#">詳細資訊</a></p>
 							</div>
 						</div>
 					</li>
@@ -188,14 +194,15 @@
 									7.喜宴、外匯宇期他宴會依餐廳規定優惠辦法(來電洽詢)。<br>
 									8.餐廳於特殊節日期間與農曆春節期間不是用此優惠。
 								</p>
+								<p class="btn"><a href="#">詳細資訊</a></p>
 							</div>
 						</div>
 					</li>
 					<li>
 						<div class="store_content">
-							<div class="store_photo">
+							<a class="store_photo" href="#">
 								<img src="images/store_img/food_08.jpg" alt="千葉火鍋-新竹忠孝店">
-							</div>
+							</a>
 							<h3 class="store_name">千葉火鍋-新竹忠孝店</h3>
 							<div class="store_info">
 								<p>
@@ -208,14 +215,15 @@
 									<span class="c_blue">優惠內容：</span><br>
 									出示識別來店消費即享有所有店內商品9折優惠
 								</p>
+								<p class="btn"><a href="#">詳細資訊</a></p>
 							</div>
 						</div>
 					</li>
 					<li>
 						<div class="store_content">
-							<div class="store_photo">
+							<a class="store_photo" href="#">
 								<img src="images/store_img/food_09.jpg" alt="千葉火鍋-新竹忠孝店">
-							</div>
+							</a>
 							<h3 class="store_name">千葉火鍋-新竹忠孝店</h3>
 							<div class="store_info">
 								<p>
@@ -228,6 +236,7 @@
 									<span class="c_blue">優惠內容：</span><br>
 									出示識別來店消費即享有所有店內商品9折優惠
 								</p>
+								<p class="btn"><a href="#">詳細資訊</a></p>
 							</div>
 						</div>
 					</li>
