--- a/jetfi_wifi/index.html
+++ b/jetfi_wifi/index.html
@@ -10,24 +10,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/style.css">
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
-		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
-		<!-- FlexSlider -->
-		<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
-		<script defer src="js/jquery.flexslider.js"></script>
+		<!-- Link Swiper's CSS -->
+	  	<link rel="stylesheet" href="css/swiper.min.css">
 
-		<script type="text/javascript">
-		    $(function(){
-		      SyntaxHighlighter.all();
-		    });
-		    $(window).load(function(){
-		      $('#flexslider').flexslider({
-		        animation: "slide",
-		        start: function(slider){
-		          $('body').removeClass('loading');
-		        }
-		      });
-		    });
-		</script>
+	  	<!-- Demo styles -->
+	  	<style>
+	    	html, body { position: relative;height: 100%;}
+	    	body { background: #eee; font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 14px; color:#000; margin: 0; padding: 0; }
+		    .swiper-container { width: 100%; height: 100%; }
+		    .swiper-slide { text-align: center;font-size: 18px;}
+	    	.swiper-slide img{ width: 100%; }
+	    	.swiper-button-next:after, .swiper-button-prev:after{ color: #fabd00;}
+	    	:root{ --swiper-theme-color: #fabd00; }
+	  	</style>
 	</head>
 	<body>
 		<header class="header_container">
@@ -58,13 +53,27 @@
 			</section>
 		</header>
 		<main class="main_container">
-			<section class="main_flexslider" id="flexslider">
-				<h3 class="banner_title"><span>出國租 WiFi 首選<br>jetfi WiFi 網路分享器</span></h3>
-	            <ul class="slides">
-	                <li style="background-image:url(images/main-banner/115.jpg);"></li>
-	                <li style="background-image:url(images/main-banner/101.jpg);"></li>
-	                <li style="background-image:url(images/main-banner/39.jpg);"></li>
-	            </ul>
+			<section class="main_flexslider">
+	            <!-- Swiper -->
+			  	<div class="slides swiper-container">
+			    	<div class="swiper-wrapper">
+			     		<div class="swiper-slide">
+			     			<img src="images/main-banner/messageImage_1583228599435.jpg">
+			      		</div>
+			      		<!-- 改連結 -->
+				      	<a class="swiper-slide" href="#">
+				      		<img src="images/main-banner/39.jpg">
+				      	</a>
+				      	<div class="swiper-slide">
+				      		<img src="images/main-banner/101.jpg">
+				      	</div>
+			    	</div>
+			    	<!-- Add Arrows -->
+			    	<div class="swiper-button-next"></div>
+			    	<div class="swiper-button-prev"></div>
+			    	<!-- Add Pagination -->
+			    	<div class="swiper-pagination"></div>
+			  	</div>
 	        </section>
 			<section class="area_content">
 				<h3 class="top_title">WiFi網路分享器租借</h3>
@@ -162,6 +171,25 @@
 				<a href="https://www.jetfi-tech.com.tw/disclaimer.php" target="_block">免責聲明</a>
 			</p>
 		</footer>
+		<!-- Swiper JS -->
+	  	<script src="js/swiper.min.js"></script>
+
+	  	<!-- Initialize Swiper -->
+	  	<script>
+    var swiper = new Swiper('.swiper-container', {
+      slidesPerView: 1,
+      spaceBetween: 30,
+      loop: true,
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+    });
+  </script>
 	</body>
 </html>
 
