手機版 左右箭頭 調小一點

--- a/jetfi_wifi/index.html
+++ b/jetfi_wifi/index.html
@@ -22,6 +22,9 @@
 	    	.swiper-slide img{ width: 100%; }
 	    	.swiper-button-next:after, .swiper-button-prev:after{ color: #fabd00;}
 	    	:root{ --swiper-theme-color: #fabd00; }
+	    	@media (max-width:499px){
+	    		.swiper-button-next:after, .swiper-button-prev:after{ font-size: 30px }
+	    	}
 	  	</style>
 	</head>
 	<body>
